--- a/clientapi/style.css
+++ b/clientapi/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     background-color: #2b1e3d; 
@@ -14,6 +13,7 @@ header, nav, footer {
     padding: 10px;
     text-align: left;
 }
+
 
 
 a {
@@ -39,6 +39,7 @@ button {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s;
+    margin: 1px;
 }
 
 button:hover {
